quality check with findbugs, 2 bugs fixed